--- a/wk2/index.html
+++ b/wk2/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <!--다음은 링킹 스타일입니다-->
     <link rel="stylesheet" href="style.css">
 
     <title>css 배우기</title>
-
+    <!--다음은 내부 스타일입니다-->
     <style>
         h2 {
             color: rgb(226, 20, 206);
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+    <!--다음은 인라인 스타일입니다-->
     <h3 id="something">테스트1</h3>
     <p class="something">테스트2</p>
     <p id="good">테스트3</p>
